--- a/website/src/pages/tutorial/basic/03-graphql-server.mdx
+++ b/website/src/pages/tutorial/basic/03-graphql-server.mdx
@@ -1,5 +1,4 @@
 import { Callout, PackageCmd } from '@theguild/components'
-import { Accordion } from './accordion'
 
 # GraphQL Server
 
@@ -18,7 +17,8 @@ In this tutorial, we will be using GraphQL Yoga for building our Node.js GraphQL
   documentation after finishing the tutorial.
 </Callout>
 
-<Accordion title="v2">
+<details>
+  <summary>v2</summary>
 
 You'll need the `@graphql-yoga/node` package available in your project, so install it using the following command:
 
@@ -49,9 +49,10 @@ $ cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts
 [2022-02-25 14:40:17.818 +0000] INFO (13296 on DESKTOP-U72CGKK): GraphQL Server running at http://127.0.0.1:4000/graphql.
 ```
 
-</Accordion>
+</details>
 
-<Accordion title="v3" initiallyOpen>
+<details open>
+  <summary>v3</summary>
 
 You'll need the `graphql-yoga` package available in your project, so install it using
 the following command:
@@ -76,7 +77,7 @@ main()
 
 Now, try to run your server again with `npm run dev` (or, `npm run start`), open your browser and navigate to `http://localhost:4000/graphql`.
 
-</Accordion>
+</details>
 
 Type in the following operation in the left editor section and press the `Play` button for executing the operation against the GraphQL server.
 
