--- a/website/src/pages/tutorial/basic/03-graphql-server.mdx
+++ b/website/src/pages/tutorial/basic/03-graphql-server.mdx
@@ -8,14 +8,17 @@ You are going to use the HTTP protocol to serve the GraphQL server, but note tha
 
 ## Creating a GraphQL HTTP Server with Yoga
 
-In this tutorial, we will be using `@graphql-yoga/node` for building our Node.js GraphQL HTTP server.
+In this tutorial, we will be using GraphQL Yoga for building our Node.js GraphQL HTTP server.
 
 <Callout>
   Yoga can also run on other platforms, such as Cloudflare Workers or Deno. We
   recommend checking out [the integrations
-  section](/docs/integrations/integration-with-cloudflare-workers) in our
+  section](/v3/integrations/integration-with-cloudflare-workers) in our
   documentation after finishing the tutorial.
 </Callout>
+
+<details>
+  <summary>v2</summary>
 
 You'll need the `@graphql-yoga/node` package available in your project, so install it using the following command:
 
@@ -46,7 +49,35 @@ $ cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts
 [2022-02-25 14:40:17.818 +0000] INFO (13296 on DESKTOP-U72CGKK): GraphQL Server running at http://127.0.0.1:4000/graphql.
 ```
 
-Now open your browser and navigate to `http://localhost:4000/graphql`.
+</details>
+
+<details open>
+  <summary>v3</summary>
+
+You'll need the `graphql-yoga` package available in your project, so install it using
+the following command:
+
+<PackageCmd packages={['--save-exact graphql-yoga']} />
+
+Now, update `src/main.ts` to create a simple GraphQL HTTP server on port `4000`:
+
+```ts filename="src/main.ts"
+import { createYoga } from 'graphql-yoga'
+import { createServer } from 'http'
+import { schema } from './schema'
+
+function main() {
+  const yoga = createYoga({ schema })
+  const server = createServer(yoga)
+  server.listen(4000)
+}
+
+main()
+```
+
+Now, try to run your server again with `npm run dev` (or, `npm run start`), open your browser and navigate to `http://localhost:4000/graphql`.
+
+</details>
 
 Type in the following operation in the left editor section and press the `Play` button for executing the operation against the GraphQL server.
 
