--- a/website/src/pages/tutorial/basic/07-connecting-server-and-database.mdx
+++ b/website/src/pages/tutorial/basic/07-connecting-server-and-database.mdx
@@ -32,8 +32,12 @@ export async function createContext(): Promise<GraphQLContext> {
 
 Now, you'll need to import the `createContext` function and make sure you add it as part of the GraphQL execution process:
 
+<details>
+  <summary>v2</summary>
+
 ```typescript
-// ... other imports ...
+import { createServer } from '@graphql-yoga/node'
+import { schema } from './schema'
 import { createContext } from './context'
 
 async function main() {
@@ -43,6 +47,28 @@ async function main() {
 
 main()
 ```
+
+</details>
+
+<details open>
+  <summary>v3</summary>
+
+```typescript
+import { createYoga } from 'graphql-yoga'
+import { createServer } from 'http'
+import { schema } from './schema'
+import { createContext } from './context'
+
+function main() {
+  const yoga = createYoga({ schema, context: createContext })
+  const server = createServer(yoga)
+  server.listen(4000)
+}
+
+main()
+```
+
+</details>
 
 In the next step, you'll connect the Prisma client and your GraphQL server!
 
