Don't accept an object of typeDefs and resolvers (#1753)
* Don't accept an object of typeDefs and resolvers

* chore(dependencies): updated changesets for modified dependencies

* Update .changeset/fifty-elephants-provide.md

Co-authored-by: Saihajpreet Singh <saihajpreet.singh@gmail.com>

* Update changeset

* Rebase

* chore(dependencies): updated changesets for modified dependencies

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Saihajpreet Singh <saihajpreet.singh@gmail.com>

--- a/website/src/pages/v3/migration/migration-from-yoga-v1.mdx
+++ b/website/src/pages/v3/migration/migration-from-yoga-v1.mdx
@@ -14,8 +14,8 @@ You can start with updating `graphql-yoga` package.import { PackageCmd } from '@
 
 ## Server setup
 
-Yoga v1 no longer uses a class for constructing the server, the `createServer` function is now used.
-Also the `typeDefs` and `resolvers` config options must now be passed to a `schema` property.
+Yoga v1 no longer uses a class for constructing the server, the `createYoga` function is now used.
+Also the `typeDefs` and `resolvers` config options must now be passed to a `schema` property with `createSchema`.
 
 **Yoga v1**
 
@@ -31,12 +31,12 @@ server.start()
 **Yoga v3**
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 import { typeDefs, resolvers } from './schema'
 
 const yoga = createYoga({
-  schema: { typeDefs, resolvers },
+  schema: createSchema({ typeDefs, resolvers }),
 })
 
 const server = createServer(yoga)
@@ -69,18 +69,18 @@ In Yoga v3 you now need to use the `fs` module for Node.js.
 ```ts
 import * as path from 'path'
 import * as fs from 'fs'
-import { createYoga } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 import { resolvers } from './schema'
 
 const yoga = createYoga({
-  schema: {
+  schema: createSchema({
     typeDefs: fs.readFileSync(
       path.join(__dirname, 'type-definitions.graphql'),
       'utf-8',
     ),
     resolvers,
-  },
+  }),
 })
 
 const server = createServer(yoga)
@@ -196,16 +196,16 @@ server.listen(4000)
 **Yoga v3**
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 import { typeDefs, resolvers } from './schema'
 import { db } from './db'
 
 const yoga = createYoga({
-  schema: {
+  schema: createSchema({
     typeDefs,
     resolvers,
-  },
+  }),
   context: (initialContext) => {
     const authHeader =
       initialContext.request.headers.get('authorization') ?? null
@@ -266,7 +266,7 @@ server.start()
 **Yoga v3**
 
 ```ts
-import { createYoga } from 'graphql-yoga'
+import { createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 import { useGraphQLMiddleware } from '@envelop/graphql-middleware'
 import { typeDefs, resolvers } from './schema'
@@ -293,7 +293,7 @@ const permissions = {
 }
 
 const yoga = createYoga({
-  schema: { typeDefs, resolvers },
+  schema: createSchema({ typeDefs, resolvers }),
   plugins: [useGraphQLMiddleware([permissions])],
 })
 
@@ -403,7 +403,7 @@ server.start()
 **Yoga v3**
 
 ```ts
-import { createPubSub, createYoga } from 'graphql-yoga'
+import { createPubSub, createYoga, createSchema } from 'graphql-yoga'
 import { createServer } from 'http'
 
 const pubSub = new PubSub<{
@@ -412,7 +412,7 @@ const pubSub = new PubSub<{
 
 const yoga = createYoga({
   context: { pubSub },
-  schema: {
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type Query {
         _: Boolean
@@ -441,7 +441,7 @@ const yoga = createYoga({
         },
       },
     },
-  },
+  }),
 })
 
 const server = createServer(yoga)
@@ -510,7 +510,7 @@ const pubSub = new PubSub<{
 
 const yoga = createYoga({
   context: { pubSub },
-  schema: {
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       type Query {
         _: Boolean
@@ -542,7 +542,7 @@ const yoga = createYoga({
         },
       },
     },
-  },
+  }),
 })
 
 const server = createServer(yoga)
