--- a/website/src/pages/v3/features/file-uploads.mdx
+++ b/website/src/pages/v3/features/file-uploads.mdx
@@ -24,7 +24,7 @@ import { createYoga } from 'graphql-yoga'
 
 // Provide your schema
 const yoga = createYoga({
-  schema: {
+  schema: createSchema({
     typeDefs: /* GraphQL */ `
       scalar File
 
@@ -51,7 +51,7 @@ const yoga = createYoga({
         },
       },
     },
-  },
+  }),
 })
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
