Add link to migration guide

--- a/website/src/pages/v3/comparison.mdx
+++ b/website/src/pages/v3/comparison.mdx
@@ -92,7 +92,7 @@ https://www.graphql-yoga.com/docs/features/apollo-federation
 
 We believe GraphQL Yoga is the best Apollo Federation Server out there.
 
-
+The migration from Apollo Server to Yoga Server is easy and you can find [instructions here](https://www.the-guild.dev/graphql/yoga-server/v3/migration/migration-from-apollo-server).
 
 ## GraphQL Yoga and GraphQL Helix
 
