--- a/website/src/pages/v3/integrations/integration-with-deno.mdx
+++ b/website/src/pages/v3/integrations/integration-with-deno.mdx
@@ -13,7 +13,11 @@ We will use `graphql-yoga` which has an agnostic HTTP handler using [Fetch API](
 Create a `deno-yoga.ts` file;
 
 ```ts
-import { createYoga, createSchema } from 'npm:graphql-yoga'
+import {
+  createYoga,
+  createSchema,
+} from 'https://cdn.skypack.dev/graphql-yoga@three?dts'
+import { serve } from 'https://deno.land/std@0.157.0/http/server.ts'
 
 const yoga = createYoga({
   schema: createSchema({
@@ -30,21 +34,17 @@ const yoga = createYoga({
   }),
 })
 
-Deno.serve(
-  async (req) => {
-    const res = await yoga.handleRequest(req)
-    return new Response(res.body, res)
+serve(yoga, {
+  onListen({ hostname, port }) {
+    console.log(`Listening on http://${hostname}:${port}/graphql`)
   },
-  {
-    port: 4000,
-  },
-)
+})
 ```
 
 And run it;
 
 ```bash
-deno run --allow-net --allow-env --allow-read --unstable --compat index.ts
+deno run index.ts
 ```
 
 > You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/v3/examples/deno)
