--- a/website/src/pages/v3/features/automatic-persisted-queries.mdx
+++ b/website/src/pages/v3/features/automatic-persisted-queries.mdx
@@ -29,7 +29,9 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 Start your yoga server and send a request for priming the cache.
@@ -75,7 +77,9 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 The `set` and `get` properties on the store can also return a `Promise`.
