--- a/website/src/pages/v3/features/context.mdx
+++ b/website/src/pages/v3/features/context.mdx
@@ -41,7 +41,9 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 ```sh
@@ -80,7 +82,9 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 You can also pass a function as the `context` property. The function will be invoked for each incoming GraphQL request with the initial context as an argument and after the invocation it will be merged with the initial context.
@@ -112,7 +116,9 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+    console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 The function can either return an object or a Promise that resolves to an object.
@@ -140,9 +146,13 @@ const yoga = createYoga({
     return { someNumber: 13 }
   },
 })
-
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 ## Advanced Context Life-Cycle
@@ -226,11 +236,15 @@ const yoga = createYoga({
     // get custom header value
     const foo = request.headers.get('x-foo') ?? null
     return { foo }
-  },
+server.listen(4000, () => {
+    console.info('Server is running on http://localhost:4000/graphql')
+})
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+    console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 In this case, your final context object will have an extra `foo` property.
