--- a/website/src/pages/v3/features/persisted-operations.mdx
+++ b/website/src/pages/v3/features/persisted-operations.mdx
@@ -36,7 +36,9 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 Start your yoga server and send the following request.
@@ -82,7 +84,9 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 ## Sending the hash from the client
@@ -136,5 +140,7 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+    console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
