--- a/website/src/pages/tutorial/basic/03-graphql-server.mdx
+++ b/website/src/pages/tutorial/basic/03-graphql-server.mdx
@@ -69,7 +69,9 @@ import { schema } from './schema'
 function main() {
   const yoga = createYoga({ schema })
   const server = createServer(yoga)
-  server.listen(4000)
+  server.listen(4000, () => {
+    console.info('Server is running on http://localhost:4000/graphql')
+  })
 }
 
 main()
