--- a/website/src/pages/v3/features/apollo-federation.mdx
+++ b/website/src/pages/v3/features/apollo-federation.mdx
@@ -63,7 +63,9 @@ const yoga = createYoga({
 
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 ## Federation Service
@@ -148,7 +150,9 @@ const yoga = createYoga({
 
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 ## Working Example
