--- a/website/src/pages/v3/features/envelop-plugins.mdx
+++ b/website/src/pages/v3/features/envelop-plugins.mdx
@@ -33,5 +33,7 @@ const yoga = createYoga({
 
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
