--- a/website/src/pages/v3/features/error-masking.mdx
+++ b/website/src/pages/v3/features/error-masking.mdx
@@ -42,7 +42,9 @@ const yoga = createYoga({
 
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 Executing the following operation results in an execution result that does not include any detail from the error raised by the fetch call.
@@ -125,7 +127,9 @@ const yoga = createYoga({
 })
 
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 **GraphQL Operation**
@@ -219,7 +223,9 @@ const yoga = createYoga({
 
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 **Query for non existing user**
@@ -314,7 +320,9 @@ const yoga = createYoga({
 
 // Start the server and explore http://localhost:4000/graphql
 const server = createServer(yoga)
-server.listen(4000)
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
 ```
 
 **Query for non existing user**
