--- a/website/src/pages/v3/features/logging-and-debugging.mdx
+++ b/website/src/pages/v3/features/logging-and-debugging.mdx
@@ -38,6 +38,34 @@ server.listen(4000, () => {
 })
 ```
 
+You can further hook into the logging system by leveraging [envelop](https://www.envelop.dev/plugins/use-logger)'s [`useLogger`](https://www.envelop.dev/plugins/use-logger) plugin.
+
+```ts
+import { createYoga, useLogger } from 'graphql-yoga'
+import { createServer } from 'node:http'
+import { schema } from './my-schema'
+import { logger } from './my-logger'
+
+const yoga = createYoga({
+  schema,
+  plugins: [
+    useLogger({
+      logFn: (eventName, args) => {
+        // Event could be execute-start / execute-end / subscribe-start / subscribe-end / etc.
+        // args will include the arguments passed to execute/subscribe (in case of "start" event) and additional result in case of "end" event.
+        logger.debug(eventName, ...args)
+      },
+    }),
+  ],
+})
+
+const server = createServer(yoga)
+
+server.listen(4000, () => {
+  console.info('Server is running on http://localhost:4000/graphql')
+})
+```
+
 ## Debugging
 
 Note that Yoga can run in debug when having `DEBUG=1` in the environment. Doing so will increase verbosity of the logger delivering additional information including:
