--- a/website/src/pages/v3/features/logging-and-debugging.mdx
+++ b/website/src/pages/v3/features/logging-and-debugging.mdx
@@ -38,7 +38,7 @@ server.listen(4000, () => {
 })
 ```
 
-You can further hook into the logging system by leveraging [envelop](https://www.envelop.dev/plugins/use-logger)'s [`useLogger`](https://www.envelop.dev/plugins/use-logger) plugin.
+Further hook into the logging system by leveraging [envelop](https://www.envelop.dev/plugins/use-logger)'s [`useLogger`](https://www.envelop.dev/plugins/use-logger) plugin.
 
 ```ts
 import { createYoga, useLogger } from 'graphql-yoga'
