--- a/website/src/pages/v3/index.mdx
+++ b/website/src/pages/v3/index.mdx
@@ -11,69 +11,129 @@ import { PackageCmd } from '@theguild/components'
 
 <PackageCmd packages={['graphql graphql-yoga']} />
 
-## Usage
+## Schema
 
-You will need to provide schema to Yoga, either by an existing executable schema, or by providing your type definitions and resolver map.
+You will need to provide a schema to Yoga, there are many ways to assemble a GraphQL schema, here's just a few:
 
-```ts
-import { createYoga, createSchema } from 'graphql-yoga'
-import { createServer } from 'http'
+import { Tabs, Tab } from '@theguild/components'
 
-const yoga = createYoga({
-  schema: createSchema({
-    typeDefs: /* GraphQL */ `
-      type Query {
-        hello: String
-      }
-    `,
-    resolvers: {
-      Query: {
-        hello: () => 'Hello from Yoga!',
-      },
+<Tabs items={['graphql-yoga', '@graphql-tools/schema', 'Pothos', 'GraphQL Nexus']}>
+  <Tab>
+
+Use the `createSchema` function included in Yoga. It actually reuses the [`makeExecutableSchema` from @graphql-tools/schema](https://www.graphql-tools.com/docs/generate-schema).
+
+```ts filename="schema.js"
+import { createSchema } from 'graphql-yoga'
+
+export const schema = createSchema({
+  typeDefs: /* GraphQL */ `
+    type Query {
+      hello: String!
+    }
+  `,
+  resolvers: {
+    Query: {
+      hello: () => 'world',
     },
+  },
+})
+```
+
+  </Tab>
+
+  <Tab>
+
+[`makeExecutableSchema` from @graphql-tools/schema](https://www.graphql-tools.com/docs/generate-schema) is very simple, but powerful. Install it and create a schema.
+
+<PackageCmd packages={['@graphql-tools/schema']} />
+
+```ts filename="schema.js"
+import { makeExecutableSchema } from '@graphql-tools/schema'
+
+export const schema = makeExecutableSchema({
+  typeDefs: /* GraphQL */ `
+    type Query {
+      hello: String!
+    }
+  `,
+  resolvers: {
+    Query: {
+      hello: () => 'world',
+    },
+  },
+})
+```
+
+  </Tab>
+
+  <Tab>
+
+[Pothos](https://pothos-graphql.dev) is a plugin based GraphQL schema builder for TypeScript. Install it and create a schema.
+
+<PackageCmd packages={['@pothos/core']} />
+
+```ts filename="schema.js"
+import SchemaBuilder from '@pothos/core'
+
+const builder = new SchemaBuilder({})
+
+builder.queryType({
+  fields: (t) => ({
+    hello: t.string({
+      resolve: () => 'world',
+    }),
   }),
 })
 
-const server = createServer(yoga)
-server.listen(4000, () => {
-  console.info('Server is running on http://localhost:4000/graphql')
+export const schema = builder.toSchema()
+```
+
+  </Tab>
+
+  <Tab>
+
+Declarative, Code-First GraphQL Schemas for JavaScript/TypeScript through [Nexus GraphQL](https://nexusjs.org/). Install it and create schema.
+
+<PackageCmd packages={['nexus']} />
+
+```ts filename="schema.js"
+import { makeSchema, queryField } from 'nexus'
+
+const helloField = queryField('hello', {
+  type: 'String',
+  resolve: () => 'world',
 })
+
+export const schema = makeSchema({ types: [helloField] })
 ```
 
-> Yoga uses GraphQL Tools under the hood so you'll want to follow the [`makeExecutableSchema`](https://www.graphql-tools.com/docs/generate-schema) pattern.
+  </Tab>
+</Tabs>
 
-**That is it!**
+## Server
 
-Now visit [`http://localhost:4000/graphql`](http://localhost:4000/graphql) to execute the followiing query operation:
-
-```graphql
-query HelloWorld {
-  hello
-}
-```
-
-## Using existing schema
-
-You can also pass an existing `GraphQLSchema` instance to `createServer`.
-
-If you're using a library such as [Pothos](https://pothos-graphql.dev/), [GraphQL Nexus](https://nexusjs.org/), [gqtx](https://github.com/sikanhe/gqtx), or vanilla [`graphql-js`](https://graphql.org/graphql-js/type/#graphqlschema), you simply can pass the `GraphQLSchema` to `schema`:
+After you have created a GraphQL schema, simply pass it in to Yoga and liftoff! 🚀
 
 ```ts
 import { createYoga } from 'graphql-yoga'
-import { createServer } from 'http'
+import { createServer } from 'node:http'
+import { schema } from './schema' // from Schema section
 
-import { schema } from './schema'
+// Create a Yoga instance with a GraphQL schema.
+const yoga = createYoga({ schema })
 
-const yoga = createYoga({
-  schema,
-})
-
+// Pass it into a server to hook into request handlers.
 const server = createServer(yoga)
 
+// Start the server and you're done!
 server.listen(4000, () => {
   console.info('Server is running on http://localhost:4000/graphql')
 })
 ```
+
+Visit [`http://localhost:4000/graphql`](http://localhost:4000/graphql) to see Yoga in action.
+
+## Showcase
 
 <iframe
   width="100%"
@@ -84,3 +144,4 @@ server.listen(4000, () => {
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowFullScreen
 ></iframe>
+````
