--- a/website/src/pages/v3/index.mdx
+++ b/website/src/pages/v3/index.mdx
@@ -117,7 +117,7 @@ After you have created a GraphQL schema, simply pass it in to Yoga and liftoff! 
 ```ts
 import { createYoga } from 'graphql-yoga'
 import { createServer } from 'node:http'
-import { schema } from './schema' // from Schema section
+import { schema } from './schema'
 
 // Create a Yoga instance with a GraphQL schema.
 const yoga = createYoga({ schema })
