--- a/website/src/pages/v3/features/health-check.mdx
+++ b/website/src/pages/v3/features/health-check.mdx
@@ -2,7 +2,7 @@ import { Callout } from '@theguild/components'
 
 # Health check
 
-Yoga is aware of the usefulness of a health check and gives the user maximum posibilities to use the built-in check and create a "readiness" check through a simple plugin.
+Yoga is aware of the usefulness of a health check and gives the user maximum possibilities to use the built-in check and create a "readiness" check through a simple plugin.
 
 ## Types of health checks
 
